[FEAT] Log In and Log Out set up
- Added Sign Up, Log In and Forgot Password Pages
- Forgot Password is functional
- Log In is functional
- User and session data is stored in the local storage which is encrypted.
- User Redux Store also present
- Authorization has also be implemented
- Logout functionality is also present with revoking of access token
- Added .env files for configs
- Cache Busting has been set up (Testing Pending)
- Made change to HttpClient Constructor

--- a/src/pages/user/forgot/style.module.scss
+++ b/src/pages/user/forgot/style.module.scss
@@ -43,7 +43,11 @@
   position: relative;
 
   @media (max-width: $md-max-width) {
-    padding: rem(40) rem(20) rem(80);
+    // padding: rem(40) rem(20) rem(80);
+
+	  padding: rem(40) rem(30) rem(25);
+	  // padding: 40px 25px 20px;
+	  margin-bottom: 0;
   }
 }
 
