--- a/src/layouts/Login/style.module.scss
+++ b/src/layouts/Login/style.module.scss
@@ -19,7 +19,7 @@
 
   @media (max-width: $sm-max-width) {
     :global(.login-heading) {
-      display: none;
+      // display: none;
     }
   }
 
@@ -154,7 +154,7 @@
 
 .content {
   align-self: middle;
-  margin-top: 100px;
+  // margin-top: 100px;
 }
 
 .footer {
