--- a/src/pages/user/login/style.module.scss
+++ b/src/pages/user/login/style.module.scss
@@ -43,7 +43,10 @@
   position: relative;
 
   @media (max-width: $md-max-width) {
-    padding: rem(40) rem(20) rem(80);
+    // padding: rem(40) rem(20) rem(80);
+    padding: rem(40) rem(30) rem(25);
+	  // padding: 40px 25px 20px;
+	  margin-bottom: 0;
   }
 }
 
